fix: use pre-wrap on description

--- a/src/stylesheets/_pdfPage.scss
+++ b/src/stylesheets/_pdfPage.scss
@@ -194,6 +194,7 @@
         .blip-list__item-container__description {
           padding-left: 0;
           line-height: 1.5 !important;
+          white-space: pre-wrap;
         }
       }
 
